# GenX.jl

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AZURE_DOCUMENTATION.md  AZURE_QUICK_REFERENCE.md  AZURE_README.md  COMPLETE_AZURE_DOCUMENTATION.md  COMPLETE_WORKFLOW_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VERIFICATION.md  Dockerfile  Dockerfile.containerapp  Dockerfile.eventgrid  EVENT_GRID_AUTOMATION.md  EVENT_GRID_README.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  Project.toml  QUICK_REFERENCE.md  QUICK_START.sh  README_Azure_Deployment.md  README_Parallel_Container_Apps.md  Run.jl  check_azure_setup.sh  deploy_azure_infrastructure.sh  dispatch.ipynb  load_results.ipynb  monitor_deployment.sh  pyproject.toml  runner.ipynb  runner.py  setup_event_grid.sh  startup.sh  test_deployment.sh  test_upload_case.sh
.github/workflows/: azure-blob-trigger.yml  azure-container-apps-parallel.yml  deploy.yml  docker-acr-deploy.yml  docker-test.yml  eventgrid-deploy.yml
__base_settings__/: highs_settings.yml
azure-function/: function_app.py  requirements.txt
scripts/: azure_blob_utils.py  deploy_complete_workflow.sh  monitor_deployment.sh  production_monitor.py  run_genx_case.py  setup_event_grid.sh  validate_deployment.py  validate_setup.py
src/: GenX.jl
src/additional_tools/: method_of_morris.jl  (+1 more)
test_case_validation/: Fuels_data.csv  Generators_data.csv  Load_data.csv  genx_settings.yml
tests/: run_tests.py  test_azure_function.py  test_blob_integration.py  test_end_to_end.py  test_eventgrid_integration.py
(+150 files in other folders)
