[project]
name = "genx-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "nbstripout>=0.8.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pre-commit>=4.2.0",
    "universal-pathlib>=0.2.6",
    "xlwings>=0.33.14",
]
